--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://EricluvPython.github.io/says-the-murloc",
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
@@ -28,6 +29,8 @@
     "react-error-overlay": "6.0.9"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "webpack-dev-server --open --mode production",
     "prebuild": "rm -rf build && rm -rf ../backend/static/js && rm -rf ../backend/static/css && rm -rf ../backend/static/media",
     "watch": "webpack --watch",
