--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,7 +33,7 @@
     "watch": "webpack --watch",
     "build": "webpack --mode production",
     "dev": "webpack  --mode development& webpack-dev-server --open  --mode development",
-    "postbuild": "cp -r build/static ../backend",
+    "postbuild": "cp build/index.html ../backend/templates && cp -r build/static ../backend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
